--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,18 @@ yarn-error.log*
 
 *.todo
 build
+
+.vscode*
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
