--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "web-vitals": "^2.1.4"
     },
     "devDependencies": {
+        "nth-check": ">=2.0.1",
         "@testing-library/jest-dom": "^5.16.2",
         "@testing-library/react": "^12.1.3",
         "@testing-library/user-event": "^13.5.0"
