--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "react-test",
     "version": "0.1.0",
+    "homepage": "https://denyspacheco.github.io/react-test/",
     "private": true,
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.3.0",
@@ -19,13 +20,16 @@
     "devDependencies": {
         "@testing-library/jest-dom": "^5.16.2",
         "@testing-library/react": "^12.1.4",
-        "@testing-library/user-event": "^13.5.0"
+        "@testing-library/user-event": "^13.5.0",
+        "gh-pages": "^3.2.3"
     },
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
