--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+.*
+!.prettierrc
+
 # dependencies
 /node_modules
 /.pnp
@@ -40,5 +43,3 @@ build
 
 # Built Visual Studio Code Extensions
 *.vsix
-
-.*
